5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1674_1103.log
== TEST (2019-04-30 10:17:43) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o valor de x:"))
a = float(input("insira o valor de a:"))
b = float(input("insira o valor de b:"))

if(x <= b and x >= a):
	print(x , "pertence ao intervalo" , a , b)
elif(x > b or x < a):
	print(x , "nao pertence ao intervalo", a , b)
elif(b <= a):
	print("Entradas" , a "e", b , "invalidas")
-- ERROR:
File "XXXX", line 13
    print("Entradas" , a "e", b , "invalidas")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:17:45) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o valor de x:"))
a = float(input("insira o valor de a:"))
b = float(input("insira o valor de b:"))

if(x <= b and x >= a):
	print(x , "pertence ao intervalo" , a , b)
elif(x > b or x < a):
	print(x , "nao pertence ao intervalo", a , b)
elif(b <= a):
	print("Entradas" , a "e", b , "invalidas")
-- ERROR:
File "XXXX", line 13
    print("Entradas" , a "e", b , "invalidas")
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:17:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o valor de x:"))
a = float(input("insira o valor de a:"))
b = float(input("insira o valor de b:"))

if(x <= b and x >= a):
	print(x , "pertence ao intervalo" , a , b)
elif(x > b or x < a):
	print(x , "nao pertence ao intervalo", a , b)
elif(b <= a):
	print("Entradas" , a ,"e", b , "invalidas")
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:18:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o valor de x:"))
a = float(input("insira o valor de a:"))
b = float(input("insira o valor de b:"))

if(x <= b and x >= a):
	print(x , "pertence ao intervalo" , a ,",", b)
elif(x > b or x < a):
	print(x , "nao pertence ao intervalo", a ,",", b)
elif(b <= a):
	print("Entradas" , a ,"e", b , "invalidas")
-- EXECUTION TIME:
0.136304
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:18:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o valor de x:"))
a = float(input("insira o valor de a:"))
b = float(input("insira o valor de b:"))

if(x <= b and x >= a):
	print(x , "pertence ao intervalo" , a ,",", b)
elif(x > b or x < a):
	print(x , "nao pertence ao intervalo", a ,",", b)
elif(b <= a):
	print("Entradas" , a ,"e", b , "invalidas")
-- EXECUTION TIME:
0.12835
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
5.5 nao pertence ao intervalo 6.5 , 3.5
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:18:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o valor de x:"))
a = float(input("insira o valor de a:"))
b = float(input("insira o valor de b:"))

if(x <= b and x >= a):
	print(x , "pertence ao intervalo" , a ,",", b)
elif(x > b or x < a):
	print(x , "nao pertence ao intervalo", a ,",", b)
elif(b <= a):
	print("Entradas" , a ,"e", b , "invalidas")
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:19:15) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o valor de x:"))
a = float(input("insira o valor de a:"))
b = float(input("insira o valor de b:"))

if(x <= b and x >= a):
	print(x , "pertence ao intervalo" , a ,",", b)
elif(x > b or x < a):
	print(x , "nao pertence ao intervalo", a ,",", b)
elif(b <= a):
	print("Entradas" , a ,"e", b , "invalidas")
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:19:30) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o valor de x:"))
a = float(input("insira o valor de a:"))
b = float(input("insira o valor de b:"))

if(x <= b and x >= a):
	print(x , "pertence ao intervalo" , a ,",", b)
elif(x > b or x < a):
	print(x , "nao pertence ao intervalo", a ,",", b)
elif(b <= a):
	print("Entradas" , a ,"e", b , "invalidas")
-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:20:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o valor de x:"))
a = float(input("insira o valor de a:"))
b = float(input("insira o valor de b:"))

if(b <= a):
	print("Entradas" , a ,"e", b , "invalidas")
elif(x <= b and x >= a):
	print(x , "pertence ao intervalo" , a ,",", b)
elif(x > b or x < a):
	print(x , "nao pertence ao intervalo", a ,",", b)

-- OUTPUT:
2.0 nao pertence ao intervalo 3.0 , 4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:20:21) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
x = float(input("insira o valor de x:"))
a = float(input("insira o valor de a:"))
b = float(input("insira o valor de b:"))

if(b <= a):
	print("Entradas" , a ,"e", b , "invalidas")
elif(x <= b and x >= a):
	print(x , "pertence ao intervalo" , a ,",", b)
elif(x > b or x < a):
	print(x , "nao pertence ao intervalo", a ,",", b)

-- EXECUTION TIME:
0.205975
-- TEST CASE 1:
---- input:
2
3
4
---- correct output:
2.0 nao pertence ao intervalo 3.0 , 4.0
---- user output:
2.0 nao pertence ao intervalo 3.0 , 4.0
-- TEST CASE 2:
---- input:
5.5
6.5
3.5
---- correct output:
Entradas 6.5 e 3.5 invalidas
---- user output:
Entradas 6.5 e 3.5 invalidas
-- TEST CASE 3:
---- input:
6.5
1.1
22.2
---- correct output:
6.5 pertence ao intervalo 1.1 , 22.2
---- user output:
6.5 pertence ao intervalo 1.1 , 22.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
